# simple-rrss-ticket-categorizer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  improved_svm_ticket_classifier.pkl  informe.md  main.py  production_ticket_classifier.pkl  pyproject.toml  requirements.txt  sample_pipeline.py  simple_ticket_classifier.pkl  simple_ticket_classifier_optimized.pkl  ticket_classifier_pipeline.pkl  ticket_classifier_pipeline_v2.pkl
.github/workflows/: ci.yml  release.yml
app/: main.py
app/api/v1/: routes.py  schemas.py  service.py
app/static/: index.html
app/static/js/: main.js
data/processed/: it_support_tickets.csv  tickets_cleaned-2.csv  tickets_cleaned.csv  tickets_cleaned_con_category.csv
data/raw/: it_support_tickets.csv
figures/: RubricaSegundaEvaluacionIA.xlsx
models/: simple_ticket_classifier.pkl
simple_rrss_ticket_categorizer/: diagrams.py  mapping.py  pipeline.py  prediction.py  preprocessing.py
