[project]
name = "simple-rrss-ticket-categorizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyrefly>=0.38.1",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]


[tool]
[tool.pytest.ini_options]
pythonpath = "simple_rrss_ticket_categorizer"
testpaths = [
  "simple_rrss_ticket_categorizer/tests/*",
]
addopts = [
    "--import-mode=importlib",
]



[tool.ruff]
target-version = "py313"
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
    "venv/*",
    "node_modules/*",
    ".venv/*",
    ".tox/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    "build/*",
    "dist/*",
    "__pypackages__/*",
    "data/*",
    "docs/*",
    ".vscode/*",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
  "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python3"
project-includes = ["**/*.py*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
    "**/.[!/.]*/**/*",
]


